# libbuildinfo

./: Cargo.toml  README.md  USAGE.md
examples/optional_none/: Cargo.toml  README.md
examples/optional_none/src/: main.rs
examples/optional_some/: Cargo.toml  README.md  build.rs
examples/simple/: Cargo.toml  README.md
examples/simple/src/: main.rs
src/: build_info.rs  error.rs  lib.rs
src/extractor/: error.rs  mod.rs
src/extractor/agent/: agent.rs  error.rs  mod.rs
src/extractor/git/: error.rs  git.rs  mod.rs
src/extractor/package/: error.rs  mod.rs  package.rs  partial_extractors.rs
